apps/prod/frigate/httproute.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frigate

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate-route
  namespace: frigate
spec:
  parentRefs:
    - name: gatewayapi
      namespace: traefik
      sectionName: https

  hostnames:
    - frigate.fanto.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: default-headers
      backendRefs:
        - name: external-frigate
          port: 5000
